--- a/MifareReaderApp/Views/AdministratorPage.xaml
+++ b/MifareReaderApp/Views/AdministratorPage.xaml
@@ -158,7 +158,7 @@
                                Text="Общие настройки" />
                     <StackPanel>
 
-                        <StackPanel Orientation="Horizontal" >
+                        <StackPanel Orientation="Horizontal">
                             <TextBlock Text="Порт: "
                                        Width="160"
                                        VerticalAlignment="Center"></TextBlock>
@@ -174,7 +174,35 @@
                                      VerticalAlignment="Center"
                                      Text="{Binding BaudRate}"></TextBox>
                         </StackPanel>
-                        <Button Width="270" Margin="0 10 0 0"
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Статус по умолчанию: "
+                                       Width="160"
+                                       VerticalAlignment="Center"></TextBlock>
+                            <ComboBox Width="130"
+                                      DisplayMemberPath="Name"
+                                      SelectedValuePath="Name"
+                                      ItemsSource="{Binding Places}"
+                                      SelectedValue="{Binding DefaultPlace}"
+                                      VerticalAlignment="Center"></ComboBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Наименование поля ID1: "
+                                       Width="160"
+                                       VerticalAlignment="Center"></TextBlock>
+                            <TextBox Width="130"
+                                     VerticalAlignment="Center"
+                                     Text="{Binding ID1Name}"></TextBox>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Наименование поля ID2: "
+                                       Width="160"
+                                       VerticalAlignment="Center"></TextBlock>
+                            <TextBox Width="130"
+                                     VerticalAlignment="Center"
+                                     Text="{Binding ID2Name}"></TextBox>
+                        </StackPanel>
+                        <Button Width="270"
+                                Margin="0 10 0 0"
                                 Command="{Binding ChangeAdminPasswordCommand}">Изменить пароль администратора</Button>
 
                     </StackPanel>
@@ -237,6 +265,23 @@
                                         VerticalAlignment="Center"
                                         Margin="0 0 5 0"></DatePicker>
                             <Button  Command="{Binding FilterTableValuesCommand}">Фильтр</Button>
+                            <Button Margin="5 0 0 0"
+                                    Padding="5 0"
+                                    Visibility="{Binding IsSearchVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                    Command="{Binding SearchCommand}">
+                                <materialDesign:PackIcon HorizontalAlignment="Center"
+                                                         Width="25"
+                                                         Height="25"
+                                                         Kind="CreditCardSearch" />
+                            </Button>
+                            <Button Margin="5 0 0 0"
+                                    Padding="5 0"
+                                    Visibility="{Binding IsSearchVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                <materialDesign:PackIcon HorizontalAlignment="Center"
+                                                         Width="25"
+                                                         Height="25"
+                                                         Kind="CreditCardEdit" />
+                            </Button>
                         </StackPanel>
 
                         <Button Padding="4"
