--- a/MifareReaderApp/Views/AdministratorPage.xaml
+++ b/MifareReaderApp/Views/AdministratorPage.xaml
@@ -277,7 +277,8 @@
                             <Button Margin="5 0 0 0"
                                     Padding="5 0"
                                     Visibility="{Binding IsSearchVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                    Command="{Binding EditCommand}" CommandParameter="{Binding TableDataGrid.SelectedValue}">
+                                    Command="{Binding EditCommand}"
+                                    CommandParameter="{Binding ElementName=TablesDataGrid, Path=SelectedItem}">
                                 <materialDesign:PackIcon HorizontalAlignment="Center"
                                                          Width="25"
                                                          Height="25"
